# fireRender_Flame

./: .gitignore  CMakeLists.txt  README.md  README.txt  README_FLAME.txt  README_SAMPLE_PULL.md
docs/: ALGO_WORKFLOW_AND_STRUCTURE.md  CHANGES_SUMMARY.md  IMPLEMENTATION_PLAN_FLAME_VISUALIZATION.md  PARAMETER_GUIDE.md  REFERENCES.md  TECH_REPORT.md
src/: math_utils.h  noise.cpp  noise.h  sandbox_main.cpp
